frontend/test/should_pass/set_006.grg
using set_model_001;

rule assignSetToSet {
	a:A -e:E-> a; 
		
	modify {
		eval {
			a.niceSet = e.niceSet;
			e.spiceSet = a.spiceSet;
			e.niceSet = a.niceSet;
		}
	}
}