frontend/test/should_fail/set_006.grg
using set_model_002;

rule assignSetToSet {
	a:A -e:E-> a; 
		
	modify {
		eval {
			a.niceSet = e.spiceSet;
		}
	}
}